[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoneutria"
version = "1.0-rc16"
authors = [
  { name="Juan Bindez", email="juanbindez780@gmail.com" },
]
description = "Python 3 library providing security testing capabilities for webservers, enabling GET and POST requests, and incorporating checks against common vulnerabilities such as XSS, SQL Injection, and CSRF."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv2 license"}
keywords = ["Google Hacking", "GET", "POST", "tools", "cli", "scan",]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python",
	"Topic :: Internet",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Terminals",
	"Topic :: Utilities",
]
dependencies = ['requests' , 'googlesearch-python']

[project.urls]
"Homepage" = "https://github.com/juanbindez/phoneutria"
"Bug Reports" = "https://github.com/juanbindez/phoneutria/issues"
"Read the Docs" = "http://phoneutria.readthedocs.io/"

[project.scripts]
phoneutria = "phoneutria.cli:main"

[tool.setuptools.packages.find]
include = ["phoneutria*"]

[tool.setuptools]
license-files = ["LICENSE"]
